--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <link rel="manifest" href="site.webmanifest">
    <meta name="msapplication-TileColor" content="#000000">
    <meta name="theme-color" content="#000000">
-   <title>1xbet Найди</title>
+   <title>1xbet Промо</title>
 </head>
 
 <body>
